FLY wire David/force-app/main/default/objects/Account/fields/BON_Decrease_Cost_to_Collect_Annua__c.field-meta.xml
<CustomField>
    <fullName>BON_Decrease_Cost_to_Collect_Annua__c</fullName>
    <inlineHelpText>BON - Decrease in Cost-to-Collect (Annual)</inlineHelpText>
    <label>BON - Decrease Cost-to-Collect (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>