FLY wire David/force-app/main/default/objects/Account/fields/BON_Decrease_in_Statements_Cost_Annua__c.field-meta.xml
<CustomField>
    <fullName>BON_Decrease_in_Statements_Cost_Annua__c</fullName>
    <label>BON - Decrease in STMT Cost (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>