FLY wire David/force-app/main/default/objects/Account/fields/BONIncrease_Patient_PYMT_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BONIncrease_Patient_PYMT_Revenue__c</fullName>
    <inlineHelpText>BON - Increase in Patient PYMT Revenue (Annual)</inlineHelpText>
    <label>BON - Increase Patient PYMT Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>