FLY wire David/force-app/main/default/objects/Account/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Global Payments Field</description>
    <label>Branch</label>
    <type>TextArea</type>
</CustomField>