FLY wire David/force-app/main/default/objects/Account/fields/Cashiering__c.field-meta.xml
<CustomField>
    <fullName>Cashiering__c</fullName>
    <inlineHelpText>Select the cashiering system that the account uses to help in processing payments.</inlineHelpText>
    <label>Cashiering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Dimensions</fullName>
            </value>
            <value>
                <fullName>Advanced e5</fullName>
            </value>
            <value>
                <fullName>Agresso/Unit 4</fullName>
            </value>
            <value>
                <fullName>Authorize.net</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>bluQube</fullName>
            </value>
            <value>
                <fullName>B-plan Aptos</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>FACTS</fullName>
            </value>
            <value>
                <fullName>Fidelo</fullName>
            </value>
            <value>
                <fullName>Herring Bank</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>iFinance</fullName>
            </value>
            <value>
                <fullName>iSAMS</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>Nova</fullName>
            </value>
            <value>
                <fullName>Official Payments/ACI</fullName>
            </value>
            <value>
                <fullName>Oracle EBS</fullName>
            </value>
            <value>
                <fullName>Oracle Financial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>PeopleSoft</fullName>
            </value>
            <value>
                <fullName>Quick Pay</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SMART</fullName>
            </value>
            <value>
                <fullName>Sungard</fullName>
            </value>
            <value>
                <fullName>Symmetry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>