FLY wire David/force-app/main/default/objects/Account/fields/Cerner_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Cerner_System_Name__c</fullName>
    <inlineHelpText>Select the Version name for the Cerner Core system used.</inlineHelpText>
    <label>Cerner System Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Millennium</fullName>
            </value>
            <value>
                <fullName>Sorian Invision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>