FLY wire David/force-app/main/default/objects/Account/fields/Cerner_System_Version__c.field-meta.xml
<CustomField>
    <fullName>Cerner_System_Version__c</fullName>
    <inlineHelpText>Enter the Version number of the Cerner System</inlineHelpText>
    <label>Cerner System Version</label>
    <length>6</length>
    <type>Text</type>
</CustomField>