FLY wire David/force-app/main/default/objects/Account/fields/Chargeback_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Sensitivity__c</fullName>
    <description>Low = 1 Chargeback, Medium = 2 chargebacks, High = 3 or more</description>
    <inlineHelpText>Low = 1 Chargeback, Medium = 2 chargebacks, High = 3 or more</inlineHelpText>
    <label>Chargeback Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>