FLY wire David/force-app/main/default/objects/Account/fields/Child_Counted__c.field-meta.xml
<CustomField>
    <fullName>Child_Counted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Counted</label>
    <type>Checkbox</type>
</CustomField>