FLY wire David/force-app/main/default/objects/Account/fields/Client_Invoice_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoice_Schedule__c</fullName>
    <description>For B2B SAL-4518
Used to determine how often/ when client is sending invoices to their customers. IE, 1st of each month, customer contract date, ad hoc etc...</description>
    <inlineHelpText>How often/ when is the client sending invoices to their customers</inlineHelpText>
    <label>Client Invoice Schedule</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Customer Contract Date</fullName>
            </value>
            <value>
                <fullName>Ad Hoc/ Order Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>