FLY wire David/force-app/main/default/objects/Account/fields/Client_Key_Objective__c.field-meta.xml
<CustomField>
    <fullName>Client_Key_Objective__c</fullName>
    <description>SAL-6272 Edu field, to help group client objective types for reporting purposes.</description>
    <inlineHelpText>#1 Client objective</inlineHelpText>
    <label>Client Key Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Objectives</valueSetName>
    </valueSet>
</CustomField>