FLY wire David/force-app/main/default/objects/Account/fields/Client_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Legal_Entity_Name__c</fullName>
    <description>Legal Name of the Account</description>
    <inlineHelpText>Legal Name of the Account</inlineHelpText>
    <label>Client Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>