FLY wire David/force-app/main/default/objects/Account/fields/Client_Mapping_Planning__c.field-meta.xml
<CustomField>
    <fullName>Client_Mapping_Planning__c</fullName>
    <description>For Edu RMs to track Account level tasks they need to complete regularly. SAL-1782</description>
    <inlineHelpText>When was the last time you completed your client mapping/planning?</inlineHelpText>
    <label>Client Mapping/Planning</label>
    <type>Date</type>
</CustomField>