FLY wire David/force-app/main/default/objects/Account/fields/Client_objectives__c.field-meta.xml
<CustomField>
    <fullName>Client_objectives__c</fullName>
    <description>For Edu RMs to track Account level tasks they need to complete regularly. SAL-1782</description>
    <inlineHelpText>What are the client&apos;s short and long term goals? Please note these are not necessarily directly Flywire related</inlineHelpText>
    <label>Client objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>