FLY wire David/force-app/main/default/objects/Account/fields/Client_Primary_Bank__c.field-meta.xml
<CustomField>
    <fullName>Client_Primary_Bank__c</fullName>
    <description>SALDEV-1231</description>
    <inlineHelpText>Select Client&apos;s Primary Bank</inlineHelpText>
    <label>Client Primary Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>PNC Bank</fullName>
            </value>
            <value>
                <fullName>Fifth Third</fullName>
            </value>
            <value>
                <fullName>Key Bank</fullName>
            </value>
            <value>
                <fullName>Huntington</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Truist</fullName>
            </value>
            <value>
                <fullName>BMO</fullName>
            </value>
            <value>
                <fullName>Citizens</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>State Nebraska Bank &amp; Trust</fullName>
            </value>
            <value>
                <fullName>First Hawaiian Bank</fullName>
            </value>
            <value>
                <fullName>Ohio Valley Bank-Hospital</fullName>
            </value>
            <value>
                <fullName>Peoples Bank</fullName>
            </value>
            <value>
                <fullName>Prosperity Bank</fullName>
            </value>
            <value>
                <fullName>Utah Independent Bank</fullName>
            </value>
            <value>
                <fullName>First National Bank of Omaha</fullName>
            </value>
            <value>
                <fullName>Lake City Bank</fullName>
            </value>
            <value>
                <fullName>Nicolet National Bank</fullName>
            </value>
            <value>
                <fullName>Umpqua</fullName>
            </value>
            <value>
                <fullName>Zions Bank</fullName>
            </value>
            <value>
                <fullName>First Pioneer Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>