FLY wire David/force-app/main/default/objects/Account/fields/CohortGo_ID__c.field-meta.xml
<CustomField>
    <fullName>CohortGo_ID__c</fullName>
    <description>Agent Profile ID unique from CohortGo CRM</description>
    <externalId>true</externalId>
    <inlineHelpText>Agent Profile ID unique from CohortGo CRM</inlineHelpText>
    <label>CohortGo ID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>