FLY wire David/force-app/main/default/objects/Account/fields/Collection_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agencies__c</fullName>
    <description>List of collection agencies that schools use to collect on bad debt.</description>
    <inlineHelpText>List the collection agencies that account uses to collect on bad debt.</inlineHelpText>
    <label>Collection Agencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Control Technology (ACT)</fullName>
            </value>
            <value>
                <fullName>Alltran</fullName>
            </value>
            <value>
                <fullName>Cedar</fullName>
            </value>
            <value>
                <fullName>Coast</fullName>
            </value>
            <value>
                <fullName>Conserve</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Eastern Revenue</fullName>
            </value>
            <value>
                <fullName>General Revenue Corporation (GRC)</fullName>
            </value>
            <value>
                <fullName>Immediate Credit Recovery (ICR)</fullName>
            </value>
            <value>
                <fullName>Law Office of Robert Schuerger</fullName>
            </value>
            <value>
                <fullName>National Enterprise System (NES)</fullName>
            </value>
            <value>
                <fullName>Nationwide Recovery Services</fullName>
            </value>
            <value>
                <fullName>NCM</fullName>
            </value>
            <value>
                <fullName>Progressive Financial Services</fullName>
            </value>
            <value>
                <fullName>Recovery Management System (RMS)</fullName>
            </value>
            <value>
                <fullName>Reliant</fullName>
            </value>
            <value>
                <fullName>Security Credit Systems (SCS)</fullName>
            </value>
            <value>
                <fullName>State Attorney General’s Office</fullName>
            </value>
            <value>
                <fullName>Todd, Bremer, &amp; Lawson (TBL)</fullName>
            </value>
            <value>
                <fullName>Williams &amp; Fudge</fullName>
            </value>
            <value>
                <fullName>WIndham</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>