FLY wire David/force-app/main/default/objects/Account/fields/Competitive_Pricing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Pricing_Rate__c</fullName>
    <description>Enter the pricing of our competition across all methods known separated by comma EX: $30 IBT, $20 DBT, 3% ICC, 3% DCC</description>
    <inlineHelpText>Enter the pricing of our competition across all methods known separated by comma EX: $30 IBT, $20 DBT, 3% ICC, 3% DCC</inlineHelpText>
    <label>Competitive Pricing Rate</label>
    <length>150</length>
    <type>Text</type>
</CustomField>