FLY wire David/force-app/main/default/objects/Account/fields/Conference_Management_System__c.field-meta.xml
<CustomField>
    <fullName>Conference_Management_System__c</fullName>
    <description>WPM Conference Management System</description>
    <inlineHelpText>WPM Conference Management System</inlineHelpText>
    <label>Conference Management System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aventri (previously etouches)</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Kinetic Solutions KxConferencing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other (In-house or bespoke)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>