FLY wire David/force-app/main/default/objects/Account/fields/Consumer_Platform_Client__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Platform_Client__c</fullName>
    <inlineHelpText>Select whether or not this Account is a Consumer Platform Client.</inlineHelpText>
    <label>Consumer Platform Client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>