FLY wire David/force-app/main/default/objects/Account/fields/ContEd_Sys_Online_Course__c.field-meta.xml
<CustomField>
    <fullName>ContEd_Sys_Online_Course__c</fullName>
    <description>For Edu Partner Team to capture requests for these systems. SAL-2671</description>
    <inlineHelpText>Select the system used by the EDU client to offer online courses and/or courses for non-traditional students</inlineHelpText>
    <label>ContEd Sys/Online Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2U</fullName>
            </value>
            <value>
                <fullName>Acadeum</fullName>
            </value>
            <value>
                <fullName>Apprendo</fullName>
            </value>
            <value>
                <fullName>Blackboard</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Cengage / Ed2Go</fullName>
            </value>
            <value>
                <fullName>Course Merchant</fullName>
            </value>
            <value>
                <fullName>Coursera</fullName>
            </value>
            <value>
                <fullName>Crehana</fullName>
            </value>
            <value>
                <fullName>Cypher Learning</fullName>
            </value>
            <value>
                <fullName>Driehm</fullName>
            </value>
            <value>
                <fullName>Emeritus</fullName>
            </value>
            <value>
                <fullName>Leepfrog</fullName>
            </value>
            <value>
                <fullName>Modern Campus</fullName>
            </value>
            <value>
                <fullName>Moodle</fullName>
            </value>
            <value>
                <fullName>Mundus</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Student First</fullName>
            </value>
            <value>
                <fullName>Cengage</fullName>
                <isActive>false</isActive>
                <label>Cengage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>