FLY wire David/force-app/main/default/objects/Account/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>hidden field to capture legacy Contract Record # when more than one account linked to the same contract record.</description>
    <label>OBSContract#</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>