FLY wire David/force-app/main/default/objects/Account/fields/Core_System_s__c.field-meta.xml
<CustomField>
    <fullName>Core_System_s__c</fullName>
    <label>Core System(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allscripts Enterprise</fullName>
            </value>
            <value>
                <fullName>Allscripts Sunrise</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>Cerner (Community Works)</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>HealthQuest</fullName>
            </value>
            <value>
                <fullName>MEDITECH</fullName>
            </value>
            <value>
                <fullName>STAR</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
                <isActive>false</isActive>
                <label>Multi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>