FLY wire David/force-app/main/default/objects/Account/fields/Credit_Card_Acceptance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Acceptance_Policy__c</fullName>
    <inlineHelpText>For RM&apos;s - enter the clients CC acceptance policy.</inlineHelpText>
    <label>Credit Card Acceptance Policy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted - Student Pays Fees</fullName>
            </value>
            <value>
                <fullName>Accepted - School Pays Fees</fullName>
            </value>
            <value>
                <fullName>Accepted - Grads Only</fullName>
            </value>
            <value>
                <fullName>Accepted - Admissions Only</fullName>
            </value>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>