FLY wire David/force-app/main/default/objects/Account/fields/Credit_Card_CCYs__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_CCYs__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3144</description>
    <inlineHelpText>Select all the currencies that will be used with credit cards</inlineHelpText>
    <label>Credit Card CCYs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>