FLY wire David/force-app/main/default/objects/Account/fields/Credit_Risk_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Approved_On__c</fullName>
    <description>Date Credit Risk was approved. Should only be filled out by Credit Risk team.</description>
    <inlineHelpText>Date Credit Risk was approved, only filled out by Credit Risk team.</inlineHelpText>
    <label>Credit Risk Approved On</label>
    <type>Date</type>
</CustomField>