FLY wire David/force-app/main/default/objects/Account/fields/Cross_Border_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cross_Border_Fee__c</fullName>
    <description>Global Payments field</description>
    <label>Cross Border Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>