FLY wire David/force-app/main/default/objects/Account/fields/CS_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CS_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client Success Specialist Working this Account.</description>
    <inlineHelpText>Client Success Specialist Working this Account.</inlineHelpText>
    <label>CS Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsCS</relationshipName>
    <type>Lookup</type>
</CustomField>