FLY wire David/force-app/main/default/objects/Account/fields/CS_Tickets_YTD__c.field-meta.xml
<CustomField>
    <fullName>CS_Tickets_YTD__c</fullName>
    <description># of client support tickets (YTD) from Looker</description>
    <inlineHelpText># of client support tickets (YTD) from Looker</inlineHelpText>
    <label>CS Tickets YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>