FLY wire David/force-app/main/default/objects/Account/fields/CSS21_Likelihood_to_recommend_CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS21_Likelihood_to_recommend_CSS__c</fullName>
    <description>WPM Migration Field</description>
    <label>OBS0424-(CSS21) Likelihood to recom CSS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>