FLY wire David/force-app/main/default/objects/Account/fields/CSS21_Satisfaction_with_WPM__c.field-meta.xml
<CustomField>
    <fullName>CSS21_Satisfaction_with_WPM__c</fullName>
    <description>WPM Migration Field</description>
    <inlineHelpText>WPM Migration Field</inlineHelpText>
    <label>OBS0424-(CSS21) Satisfaction with WPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>