FLY wire David/force-app/main/default/objects/Account/fields/CSS21_Value_of_PS_Consultancy__c.field-meta.xml
<CustomField>
    <fullName>CSS21_Value_of_PS_Consultancy__c</fullName>
    <description>WPM Migration Field</description>
    <inlineHelpText>WPM Migration Field</inlineHelpText>
    <label>OBS0424-(CSS21) Value of PS Consultancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>