FLY wire David/force-app/main/default/objects/Account/fields/CSS21_Value_of_Research__c.field-meta.xml
<CustomField>
    <fullName>CSS21_Value_of_Research__c</fullName>
    <description>WPM Field Migration</description>
    <inlineHelpText>WPM Field Migration</inlineHelpText>
    <label>OBS0424-(CSS21) Value of Research</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>