FLY wire David/force-app/main/default/objects/Account/fields/CSS22_Likelihood_to_recommend_WPM__c.field-meta.xml
<CustomField>
    <fullName>CSS22_Likelihood_to_recommend_WPM__c</fullName>
    <description>WPM Field Migration</description>
    <inlineHelpText>WPM Field Migration</inlineHelpText>
    <label>OBS0424-(CSS22)Likelihood to recom WPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>