FLY wire David/force-app/main/default/objects/Account/fields/CSS_Customer_Pulse__c.field-meta.xml
<CustomField>
    <fullName>CSS_Customer_Pulse__c</fullName>
    <description>WPM Engagement Level of Client with Customer Success Specialist</description>
    <inlineHelpText>WPM Engagement Level of Client with Customer Success Specialist</inlineHelpText>
    <label>OBS0424-CSS Customer Pulse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Engagement</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Fully Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>